--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,11 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
-        "uspdev/laravel-usp-theme": "^2.0"
+        "laravel/ui": "^3.2",
+        "uspdev/laravel-usp-faker": "^1.0",
+        "uspdev/laravel-usp-theme": "^2.0",
+        "uspdev/replicado": "^1.5",
+        "uspdev/senhaunica-socialite": "^2.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
