--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,18 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+REPLICADO_HOST=192.168.100.89
+REPLICADO_PORT=1498
+REPLICADO_DATABASE=rep_dbc
+REPLICADO_USERNAME=dbmaint_read
+REPLICADO_PASSWORD=secret
+REPLICADO_CODUNDCLG=8
+REPLICADO_CODCUR=1,2,3
+
+SENHAUNICA_KEY=fflch_sti
+SENHAUNICA_SECRET=sua_super_chave_segura
+SENHAUNICA_CALLBACK_ID=85
+SENHAUNICA_DEV="no"
+
+ADMINS=123456
