--- a/.env.example
+++ b/.env.example
@@ -54,7 +54,7 @@ REPLICADO_DATABASE=rep_dbc
 REPLICADO_USERNAME=dbmaint_read
 REPLICADO_PASSWORD=secret
 REPLICADO_CODUNDCLG=8
-REPLICADO_CODCUR=1,2,3
+REPLICADO_SYBASE=1
 
 SENHAUNICA_KEY=fflch_sti
 SENHAUNICA_SECRET=sua_super_chave_segura
