--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
         "laravellegends/pt-br-validator": "^8.0",
+        "rap2hpoutre/laravel-log-viewer": "^1.7",
         "uspdev/laravel-usp-faker": "^1.0",
         "uspdev/laravel-usp-theme": "^2.0",
         "uspdev/replicado": "^1.5",
