ajuste .env e fix remeberjob

--- a/.env.example
+++ b/.env.example
@@ -61,7 +61,7 @@ SENHAUNICA_SECRET=sua_super_chave_segura
 SENHAUNICA_CALLBACK_ID=85
 SENHAUNICA_DEV="no"
 
-ADMINS=123456
+SENHAUNICA_ADMINS=123456
 CODPES_BIBLIOTECA=123456
 
 USP_THEME_SKIN = fflch
