--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "barryvdh/laravel-dompdf": "^0.9.0",
+        "barryvdh/laravel-dompdf": "^0.8.6",
         "doctrine/dbal": "^3.0",
+        "fflch/laravel-fflch-pdf": "^1.0",
         "fflch/laravel-fflch-stepper": "^2.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
